--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>This is a Heading - DEV1</h1>
 
-    
+
     <p>Lorem ipsum dolor sit amet.</p>
 
 
@@ -20,5 +20,7 @@
 
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero tempore aliquid recusandae deleniti deserunt ipsum dolor! Sunt dolor ea architecto.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui accusamus nobis itaque asperiores laboriosam quasi provident rem perferendis, voluptates consectetur?</p>
 </body>
 </html>
